# toolza_sender

./: .gitignore  Cargo.toml  README.md
src/: history.rs  lib.rs  main.rs  protocol.rs  stats.rs  sync.rs  utils.rs
src/app/: actions.rs  event_handler.rs  mod.rs  state.rs
src/extract/: lz4.rs  mod.rs  tar.rs  types.rs  zip.rs  zst.rs
src/i18n/: mod.rs  translations.rs
src/network/: compression.rs  events.rs  mod.rs  scanner.rs  sender.rs  speedtest.rs
src/network/receiver/: handlers.rs  mod.rs  options.rs  streaming.rs
src/network/transport/: kcp.rs  mod.rs  quic.rs  tcp.rs  udp.rs
src/ui/: extract_view.rs  extraction_window.rs  history_view.rs  mod.rs  receive_view.rs  send_view.rs  speedtest_view.rs  widgets.rs
tests/: integration_tests.rs
