[package]
name = "toolza_sender"
version = "1.0.0"
edition = "2021"
description = "Fast file transfer utility with GUI - netcat alternative"
authors = ["toolza"]

# GUI бинарник
[[bin]]
name = "toolza_sender"
path = "src/main.rs"

# CLI бинарник
[[bin]]
name = "toolza_cli"
path = "src/bin/cli.rs"

[features]
default = ["all-transports"]
quic = ["quinn", "rustls", "rcgen"]
kcp = ["tokio_kcp"]
all-transports = ["quic", "kcp"]
minimal = []  # только TCP + UDP

[dependencies]
# CLI parser
clap = { version = "4.5", features = ["derive"] }
# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Async traits
async-trait = "0.1"

# Serialization for protocol
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File dialog
rfd = "0.15"

# Cross-platform utilities
dirs = "5.0"

# Network utilities for scanning
local-ip-address = "0.6"

# Progress and utilities
indicatif = "0.17"

# Fast LZ4 compression
lz4_flex = "0.11"

# Archive extraction
tar = "0.4"
zip = "2.2"
flate2 = "1.0"  # для tar.gz

# Parallel processing
rayon = "1.10"

# QUIC protocol (optional)
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", optional = true }

# KCP protocol (optional) - fast reliable UDP
tokio_kcp = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

